fixed navbar brand alignment, scrollspy

--- a/assets/stylesheets/toboggan.scss
+++ b/assets/stylesheets/toboggan.scss
@@ -35,7 +35,7 @@ html, body {
 
 .pre-scrollable {
 	flex: 1;
-	max-height: 95% !important;
+	max-height: 100% !important;
   margin-right: -15%;
 }
 
@@ -57,18 +57,11 @@ html, body {
   z-index: -1;
 }
 
-<<<<<<< HEAD
 #map-canvas {
   height: 100vh; 
   width: 50%; 
   margin-right: 15px;
   margin-left: -15px; 
-=======
-@media (max-width: 800px) {
-  #main-wrapper {
-    flex-direction: column;
-  }
->>>>>>> 5fe85c906d0a2c5a7be39ec46a8b498115bf1dbf
 }
 
 .grow { transition: all .2s ease-in-out; }
@@ -93,11 +86,11 @@ h2 {
 
 #hotels, #restaurants, #activities {
   &::before {
-    display: block;
-  content: " ";
-  margin-top: -45px;
-  height: 45px;
-  visibility: hidden;
+    display: block; 
+  content: " "; 
+  margin-top: -45px; 
+  height: 45px; 
+  visibility: hidden; 
   }
 }
 
@@ -115,13 +108,13 @@ h2 {
 .assetimages {
   /* Prevent vertical gaps */
   line-height: 0;
-
+   
   -webkit-column-count: 2;
   -webkit-column-gap:   0px;
   -moz-column-count:    2;
   -moz-column-gap:      0px;
   column-count:         2;
-  column-gap:           0px;
+  column-gap:           0px;  
 }
 
 .assetimages * {
@@ -141,16 +134,13 @@ h4 {
   display: table;
   clear: both;
 }
-<<<<<<< HEAD
 
 .navbar-brand {
-  img {
+  * {
   height: 120%;
   width: auto;
+  padding-right: 5%;
   }
 }
 
-
 @import "media-queries";
-=======
->>>>>>> 5fe85c906d0a2c5a7be39ec46a8b498115bf1dbf
